@@ -316,6 +316,7 @@ $config = Zend_Registry::get('config');
 		$(':file').filestyle();
 	    });
 	</script>
+	<script src="js/toggle-content.js"></script>
     <!-- <script src="http://tablesorter.com/__jquery.tablesorter.min.js"></script> -->
     </body>
 </html>
